--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,5 +1,6 @@
 on:
-  push: branches: main
+  push:
+    branches: main
 name: 🚀 Deploy website on push
 jobs:
   web-deploy:
@@ -12,7 +13,7 @@ jobs:
       - name: Use Node.js 18
         uses: actions/setup-node@v2
         with:
-          node-version: "18"
+          node-version: '18'
 
       - name: 🔨 Build Project
         run: |
